# gncxml

./: .gitignore  README.md  README.rst  extract_gnc_splits.py  pyproject.toml  setup.py
examples/: module_usage.html  module_usage.ipynb
gncxml/: __init__.py  __main__.py  _cli.py  _iso4217.py  book.py  cli.py  iso4217.py
scripts/: gncxml
