[tool.poetry]
name = "gncxml"
version = "0.7.2"
description = "Extract entries from GnuCash data file to pandas.DataFrame."
license = "Apache-2.0"
authors = ["LiosK <contact@mail.liosk.net>"]
readme = "README.md"
homepage = "https://github.com/LiosK/gncxml"
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial",
]

[tool.poetry.scripts]
gncxml = "gncxml._cli:main"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
