[project]
name = "gncxml"
version = "0.7.15"
description = "Extract entries from GnuCash data file to pandas.DataFrame."
authors = [{name = "LiosK",email = "contact@mail.liosk.net"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.2"]
dynamic = ["classifiers"]

[project.urls]
Homepage = "https://github.com/LiosK/gncxml"

[project.scripts]
gncxml = "gncxml._cli:main"

[tool.poetry]
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial",
]

[tool.poetry.group.dev.dependencies]
jupyterlab = ">=4.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
